test/programs/good/typechecker/dollar_1.lq
reset_qubit :: Qbit -> Qbit
reset_qubit q = reset q

main :: Bit
main = measr $ reset_qubit (new @1)

